# Pytorch_Retinaface

./: README.md  pyproject.toml
retinaface/: RFace.py  RetinaFace.py  __init__.py  type.py
retinaface/models/: _retinaface.py
retinaface/utils/: load_model.py
tests/: test_inference.py
